--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url(bg.jpg);
+    background-image: url("notebook.jpeg");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
